<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/new_note_dialog_fragment__input__title_note"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp8"
        android:layout_marginStart="@dimen/dp8"
        android:hint="@string/hint_title_dialog"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/new_note_dialog_fragment__input__content_note"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:hint="@string/hint_content_dialog"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/new_note_dialog_fragment__input__title_note"
        app:layout_constraintEnd_toEndOf="@id/new_note_dialog_fragment__input__title_note"
        app:layout_constraintStart_toStartOf="@id/new_note_dialog_fragment__input__title_note"/>

    <TextView
        android:id="@+id/new_note_dialog_fragment__label__title_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/text_selection_color_note"
        app:layout_constraintTop_toBottomOf="@id/new_note_dialog_fragment__input__content_note"
        app:layout_constraintStart_toStartOf="@id/new_note_dialog_fragment__input__content_note"/>

    <RadioGroup
        android:id="@+id/new_note_dialog_fragment__rdg__group"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/new_note_dialog_fragment__label__title_radio_group">

        <RadioButton
            android:id="@+id/new_note_dialog_fragment__rdb__color_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_weight="1"
            android:text="@string/color_red_radio_button" />

        <RadioButton
            android:id="@+id/new_note_dialog_fragment__rdb__color_grin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_weight="1"
            android:text="@string/color_grin_radio_button" />

        <RadioButton
            android:id="@+id/new_note_dialog_fragment__rdb__color_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_weight="1"
            android:text="@string/color_blue_radio_button" />
    </RadioGroup>

    <Switch
        android:id="@+id/new_note_dialog_fragment__switch__note_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/text_switch_favorite"
        android:switchPadding="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@id/new_note_dialog_fragment__rdg__group"
        app:layout_constraintStart_toStartOf="@id/new_note_dialog_fragment__label__title_radio_group"/>

</android.support.constraint.ConstraintLayout>